k8s/02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
  namespace: crud-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: crud-app
          image: localhost:5001/crud-k8s-lab:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: crud-app
  namespace: crud-lab
spec:
  selector:
    app: crud-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app
  namespace: crud-lab
spec:
  ingressClassName: nginx
  rules:
    - host: crud-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crud-app
                port:
                  number: 80
